<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sub_header_movies"
            android:title="@string/nav_sub_header_movies">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_now_playing"
                        android:icon="@drawable/ic_play_circle_grey600_24dp"
                        android:title="@string/action_now_playing" />
                    <item
                        android:id="@+id/action_upcoming"
                        android:icon="@drawable/ic_cards_grey600_24dp"
                        android:title="@string/action_upcoming" />
                    <item
                        android:id="@+id/action_popular"
                        android:icon="@drawable/ic_fire_grey600_24dp"
                        android:title="@string/action_popular" />
                    <item
                        android:id="@+id/action_top_rated"
                        android:icon="@drawable/ic_star_grey600_24dp"
                        android:title="@string/action_top_rated" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_sub_header_tv"
            android:title="@string/nav_sub_header_tv">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_tv_airing_today"
                        android:icon="@drawable/ic_cast_grey600_24dp"
                        android:title="@string/action_tv_airing_today" />
                    <item
                        android:id="@+id/action_tv_on_the_air"
                        android:icon="@drawable/ic_television_classic_grey600_36dp"
                        android:title="@string/action_tv_on_the_air" />
                    <item
                        android:id="@+id/action_tv_popular"
                        android:icon="@drawable/ic_fire_grey600_24dp"
                        android:title="@string/action_tv_popular" />
                    <item
                        android:id="@+id/action_tv_top_rated"
                        android:icon="@drawable/ic_star_grey600_24dp"
                        android:title="@string/action_tv_top_rated" />
                </group>
            </menu>
        </item>
    </group>
</menu>