<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<RatingBar
			android:id="@+id/rating_bar_rating"
			style="@style/RatingBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/text_view_rating"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rating_bar_rating"
			android:layout_marginTop="15dp"
			android:textAppearance="@style/Display"
			tools:text="@string/seven_point_five"/>

		<TextView
			android:id="@+id/text_view_rating_out_of"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/text_view_rating"
			android:layout_marginStart="@dimen/layout_movie_info_rating_out_of_margin_left"
			android:layout_toEndOf="@+id/text_view_rating"
			android:layout_toRightOf="@+id/text_view_rating"
			android:text="@string/out_of_10"
			android:textAppearance="@style/SubHeading"/>

		<TextView
			android:id="@+id/text_view_rating_num"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/text_view_rating_out_of"
			android:layout_marginStart="@dimen/layout_movie_info_rating_num_margin_left"
			android:layout_toEndOf="@+id/text_view_rating_out_of"
			android:layout_toRightOf="@+id/text_view_rating_out_of"
			android:textAppearance="@style/SubHeading"
			tools:text="@string/ten_thousand"/>
	</RelativeLayout>
</layout>