<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_film_cast_card_view_margin"
        app:contentPadding="@dimen/item_film_cast_card_view_padding">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/layout_cast_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/posterBgColor">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/placeholder_image"
                    app:srcCompat="@drawable/ic_movie_roll_grey600_48dp" />

                <ImageView
                    android:id="@+id/image_view_cast_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/poster_image"
                    android:foreground="?selectableItemBackground" />
            </FrameLayout>

            <TextView
                android:id="@+id/text_view_cast_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/layout_cast_photo"
                android:layout_alignRight="@+id/layout_cast_photo"
                android:layout_below="@+id/layout_cast_photo"
                android:layout_marginTop="@dimen/item_film_cast_cast_name_margin_top"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/BodyBold"
                tools:text="@string/actor_name" />

            <TextView
                android:id="@+id/text_view_character_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/layout_cast_photo"
                android:layout_alignRight="@+id/layout_cast_photo"
                android:layout_below="@+id/text_view_cast_name"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/CaptionItalic"
                tools:text="@string/character_name" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</layout>