<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="@dimen/activity_splash_logo_size"
            android:layout_height="@dimen/activity_splash_logo_size"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_image"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_popcorn" />

        <TextView
            android:id="@+id/text_view_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_splash_app_name_margin_top"
            android:fontFamily="@font/lato_black"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Display"
            android:textColor="@color/textColorLight" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_view_powered_by"
        android:layout_width="@dimen/activity_splash_powered_by_width"
        android:layout_height="@dimen/activity_splash_powered_by_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_splash_powered_by_margin_bottom"
        android:contentDescription="@string/powered_by_image"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_powered_by_tmdb" />
</RelativeLayout>